[package]
name = "p_s_trip_server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.19"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "full"] }
tower-http = { version = "0.4.3", features = ["cors"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
